@@ -53,4 +53,5 @@
 [[-1, 0], [1, 0]]
 [[-1, 0], [1, 0]]
 [[-1, 0], [1, 0]]
-Total time spent: 8314
+32
+Total time spent: 6733
