@@ -78,3 +78,7 @@ thue(p,1)
 
 thue(x^2+10^20,1,[1])
 thue(x^2+x*10^20+10^40,1,[1])
+
+\\ addprimes issue
+addprimes(360000000029);
+#thue(x^2+1,500009*500029* 360000000029* 2^100)
